change worker name in wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "typingdelayer",
+  "name": "typing-delayer",
   "compatibility_date": "2025-12-07",
   "assets": {
     "directory": "./dist"
